--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.1.0",
     "react-native": "^0.70.6",
     "react-native-autoscroll-flatlist": "^1.11.2",
+    "react-native-biometrics": "^3.0.1",
     "react-native-calendars": "^1.1293.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-device-info": "^10.3.0",
@@ -37,6 +38,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.6.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
     "react-native-webview": "^11.26.0",
