--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
+    "react-native-virtualized-view": "^1.0.0",
     "react-native-webview": "^11.26.0",
     "react-redux": "^8.0.5",
     "reactotron-react-native": "^5.0.3",
