did work on leave section.

--- a/app.json
+++ b/app.json
@@ -1,4 +1,7 @@
 {
   "name": "TSBuddy",
-  "displayName": "TSBuddy"
+  "displayName": "TSBuddy",
+  "expo": {
+    "userInterfaceStyle": "automatic"
+  }
 }
