--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.3.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "dotenv": "^16.0.3",
+    "moment": "^2.29.4",
     "plotly.js": "^2.17.0",
     "react": "18.1.0",
     "react-native": "^0.70.6",
