--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/react-native-action-sheet": "^4.0.1",
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "^6.7.4",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/drawer": "^6.5.6",
@@ -28,13 +29,20 @@
     "react-native-biometrics": "^3.0.1",
     "react-native-calendars": "^1.1293.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-date-picker": "^4.2.8",
     "react-native-device-info": "^10.3.0",
     "react-native-dotenv": "^3.4.6",
+    "react-native-dropdown-picker": "^5.4.4",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-material-ripple": "^0.9.1",
+    "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^14.0.1",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-plotly": "^6.0.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-select-dropdown": "^3.2.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.6.0",
     "react-native-svg-transformer": "^1.0.0",
