--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.3.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "dotenv": "^16.0.3",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "plotly.js": "^2.17.0",
     "react": "18.1.0",
@@ -40,6 +41,7 @@
     "react-native-material-ripple": "^0.9.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^14.0.1",
+    "react-native-photo-view-ex": "^1.1.0",
     "react-native-plotly": "^6.0.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
