--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-modal-dropdown": "^1.0.2",
-    "react-native-photo-view-ex": "^1.1.0",
     "react-native-plotly": "^6.0.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
@@ -64,7 +63,8 @@
     "reactotron-redux": "^3.1.3",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
