--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native": "^0.70.6",
     "react-native-autoscroll-flatlist": "^1.11.2",
     "react-native-biometrics": "^3.0.1",
+    "react-native-blob-util": "^0.17.1",
     "react-native-calendar-picker": "^7.1.3",
     "react-native-calendars": "^1.1293.0",
     "react-native-chart-kit": "^6.12.0",
@@ -42,7 +43,7 @@
     "react-native-material-ripple": "^0.9.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^14.0.1",
-    "react-native-photo-view-ex": "^1.1.0",
+    "react-native-pdf": "^6.6.2",
     "react-native-plotly": "^6.0.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
@@ -62,7 +63,8 @@
     "reactotron-redux": "^3.1.3",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "rn-pdf-reader-js": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
