--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "dotenv": "^16.0.3",
     "jwt-decode": "^3.1.2",
+    "lottie-react-native": "^5.1.5",
     "moment": "^2.29.4",
     "plotly.js": "^2.17.0",
     "react": "18.1.0",
     "react-native": "^0.70.6",
+    "react-native-animated-loader": "^1.0.0",
     "react-native-autoscroll-flatlist": "^1.11.2",
     "react-native-biometrics": "^3.0.1",
     "react-native-blob-util": "^0.17.1",
@@ -45,6 +47,7 @@
     "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-pdf": "^6.6.2",
     "react-native-plotly": "^6.0.0",
+    "react-native-progress-loader": "^1.0.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
@@ -64,7 +67,8 @@
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "rn-pdf-reader-js": "^4.1.1"
+    "rn-pdf-reader-js": "^4.1.1",
+    "rn-progress-loader": "^1.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
