--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-keychain": "^8.1.1",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-material-ripple": "^0.9.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^14.0.1",
