--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,6 +29,15 @@ buildscript {
 }
 
 allprojects {
+
+    def REACT_NATIVE_VERSION = new File(['node', '--print',"JSON.parse(require('fs').readFileSync(require.resolve('react-native/package.json'), 'utf-8')).version"].execute(null, rootDir).text.trim())
+
+    configurations.all {
+        resolutionStrategy {
+            force "com.facebook.react:react-native:" + REACT_NATIVE_VERSION
+        }
+    }
+
     repositories {
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
@@ -48,4 +57,5 @@ allprojects {
         google()
         maven { url 'https://www.jitpack.io' }
     }
+    
 }
