resolve bugs in jira

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -38,3 +38,8 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # to write custom TurboModules/Fabric components OR use libraries that
 # are providing them.
 newArchEnabled=false
+
+TS_BUDDY_STORE_FILE=TS_Buddy_KeyStore
+TS_BUDDY_KEY_ALIAS=thinksys
+TS_BUDDY_STORE_PASSWORD=thinksys
+TS_BUDDY_KEY_PASSWORD=thinksys
