--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -223,6 +223,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file(TS_BUDDY_STORE_FILE)
+            storePassword TS_BUDDY_STORE_PASSWORD
+            keyAlias TS_BUDDY_KEY_ALIAS
+            keyPassword TS_BUDDY_KEY_PASSWORD
+        }
     }
     buildTypes {
         debug {
@@ -231,7 +237,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
