--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "react-native-calendar-picker": "^7.1.3",
     "react-native-calendars": "^1.1293.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-contacts": "^7.0.5",
     "react-native-date-picker": "^4.2.8",
     "react-native-device-info": "^10.3.0",
     "react-native-dotenv": "^3.4.6",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-keychain": "^8.1.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-material-ripple": "^0.9.1",
