salarySlipPdf code push

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -267,7 +267,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
-    implementation project(':react-native-html-to-pdf')
+    // implementation project(':react-native-html-to-pdf')
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
