--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "react-native-animated-loader": "^1.0.0",
     "react-native-autoscroll-flatlist": "^1.11.2",
     "react-native-biometrics": "^3.0.1",
-    "react-native-blob-util": "^0.17.1",
     "react-native-calendar-picker": "^7.1.3",
     "react-native-calendars": "^1.1293.0",
     "react-native-chart-kit": "^6.12.0",
@@ -44,6 +43,7 @@
     "react-native-dotenv": "^3.4.6",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-keychain": "^8.1.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-material-ripple": "^0.9.1",
@@ -72,7 +72,6 @@
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "rn-pdf-reader-js": "^4.1.1",
     "rn-progress-loader": "^1.0.8",
     "uuid": "^9.0.0"
   },
