--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "^6.7.4",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^9.3.10",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/drawer": "^6.5.6",
     "@react-navigation/native": "^6.1.1",
@@ -30,7 +31,7 @@
     "moment": "^2.29.4",
     "plotly.js": "^2.17.0",
     "react": "18.1.0",
-    "react-native": "^0.70.6",
+    "react-native": "0.70.6",
     "react-native-animated-loader": "^1.0.0",
     "react-native-autoscroll-flatlist": "^1.11.2",
     "react-native-biometrics": "^3.0.1",
@@ -43,7 +44,6 @@
     "react-native-dotenv": "^3.4.6",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-gesture-handler": "^2.8.0",
-    "react-native-html-to-pdf": "^0.12.0",
     "react-native-keychain": "^8.1.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-material-ripple": "^0.9.1",
@@ -72,6 +72,7 @@
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "rn-pdf-reader-js": "^4.1.1",
     "rn-progress-loader": "^1.0.8",
     "uuid": "^9.0.0"
   },
