--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,7 +1,6 @@
-//Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-
     ext {
         buildToolsVersion = "33.0.0"
         minSdkVersion = 21
@@ -15,12 +14,14 @@ buildscript {
             // Otherwise we default to the side-by-side NDK version from AGP.
             ndkVersion = "21.4.7075529"
         }
+        kotlinVersion = '1.6.21'
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath('com.android.tools.build:gradle:7.4.1')
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:5.0.1")
