--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "@reduxjs/toolkit": "^1.9.1",
+    "@shopify/flash-list": "^1.4.3",
     "@supersami/rn-foreground-service": "^1.1.1",
     "axios": "^1.3.3",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -48,33 +49,28 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-material-ripple": "^0.9.1",
     "react-native-modal": "^13.0.1",
-    "react-native-modal-datetime-picker": "^14.0.1",
+    "react-native-modal-datetime-picker": "^17.0.0",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-pdf": "^6.6.2",
     "react-native-plotly": "^6.0.0",
     "react-native-progress-loader": "^1.0.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
-    "react-native-select-dropdown": "^3.2.1",
+    "react-native-screens": "^3.22.0",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-svg": "^13.6.0",
+    "react-native-svg": "^13.9.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
-    "react-native-virtualized-view": "^1.0.0",
     "react-native-webview": "^11.26.0",
-    "react-navigation-shared-element": "^3.1.3",
     "react-redux": "^8.0.5",
     "reactotron-react-native": "^5.0.3",
     "reactotron-redux": "^3.1.3",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "rn-pdf-reader-js": "^4.1.1",
-    "rn-progress-loader": "^1.0.8",
-    "uuid": "^9.0.0"
+    "rn-progress-loader": "^1.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
