--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-plotly": "^6.0.0",
     "react-native-progress-loader": "^1.0.0",
     "react-native-reanimated": "^2.13.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.22.0",
     "react-native-splash-screen": "^3.3.0",
