--- a/package.json
+++ b/package.json
@@ -10,51 +10,35 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@expo/react-native-action-sheet": "^4.0.1",
-    "@openspacelabs/react-native-zoomable-view": "^2.1.1",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/datetimepicker": "^6.7.4",
-    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "^9.3.10",
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/drawer": "^6.5.6",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
     "@reduxjs/toolkit": "^1.9.1",
-    "@shopify/flash-list": "^1.4.3",
-    "@supersami/rn-foreground-service": "^1.1.1",
     "axios": "^1.3.3",
     "babel-plugin-module-resolver": "^4.1.0",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.0.3",
-    "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
-    "lottie-react-native": "^5.1.5",
     "moment": "^2.29.4",
-    "plotly.js": "^2.17.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
-    "react-native-animated-loader": "^1.0.0",
-    "react-native-autoscroll-flatlist": "^1.11.2",
-    "react-native-biometrics": "^3.0.1",
-    "react-native-calendar-picker": "^7.1.3",
     "react-native-calendars": "^1.1299.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-contacts": "^7.0.5",
-    "react-native-date-picker": "^4.2.8",
     "react-native-device-info": "^10.3.0",
     "react-native-dotenv": "^3.4.6",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-gesture-handler": "^2.8.0",
-    "react-native-keychain": "^8.1.1",
+    "react-native-html-to-pdf": "^0.12.0",
     "react-native-linear-gradient": "^2.6.2",
-    "react-native-material-ripple": "^0.9.1",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.0.0",
     "react-native-modal-dropdown": "^1.0.2",
     "react-native-month-year-picker": "^1.9.0",
-    "react-native-pdf": "^6.6.2",
-    "react-native-plotly": "^6.0.0",
-    "react-native-progress-loader": "^1.0.0",
     "react-native-reanimated": "^2.13.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.4.1",
@@ -62,7 +46,6 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^13.9.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-touch-id": "^4.4.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
     "react-native-webview": "^11.26.0",
